# penrose-conf

./: .gitignore  Cargo.toml  logger.yml
src/: actions.rs  hooks.rs  lib.rs  main.rs  redshifter.rs
src/scripts/: autostart.sh
