[package]
name = "penrose-ajrae"
version = "0.1.0"
authors = ["Andrew Rae <ajrae.nv@gmail.com>"]
edition = "2018"

[[bin]]
doc = false
name = "penrose"
path = "src/main.rs"

[dependencies]
penrose = { path = "/home/ajrae/penrose" }
# penrose = { git = "https://github.com/sminez/penrose.git", rev = "023dc55b61282d8f92e31d97317ba8d562833d5a" }
# penrose = "0.2"
# log = "0.4"
log4rs = "1"
